--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -19,4 +19,24 @@
         <item>Язык</item>
         <item>Выйти</item>
     </string-array>
+
+
+    <string-array name="language_items">
+        <item>Русский</item>
+        <item>English</item>
+        <item>Deautsch</item>
+        <item>Кыргызча</item>
+    </string-array>
+
+    <string name="menu">Меню</string>
+    <string name="home">Главная</string>
+
+    <string name="loan_approved">Одобрен</string>
+    <string name="loan_registered">На рассмотрении</string>
+    <string name="loan_rejected">Выдан</string>
+
+    <string name="loan_id">№ %1$s</string>
+
+    <string name="u_bound_sum">Максимум 10 000 ₽</string>
+    <string name="l_bound_sum">Минимум 500 ₽</string>
 </resources>
